add package carousel_slider ,smooth_page_indicator

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,30 +2,26 @@ name: food_delivery_app
 description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-
 version: 1.0.0+1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
 
-
 dependencies:
+  carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.3
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
-
-
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
 
-
 flutter:
 
-  
   uses-material-design: true
   assets:
     - assets/image/
@@ -40,4 +36,3 @@ flutter:
           weight: 700
         - asset: assets/font/Roboto-Black.ttf
           weight: 900
-    
